--- a/app/templates/teams.hbs
+++ b/app/templates/teams.hbs
@@ -1,9 +1,9 @@
-<div class="ui center aligned header"><h1>NCAA Matchup</h1></div>
+<div class="ui center aligned header"><h1 class="ui bball-red header">NCAA Matchup</h1></div>
 <div class="ui sixteen wide page grid main-page">
   <div class = "ui eight wide column">
     {{outlet 'teamone'}}
   </div>
-  <div class="ui vertical divider">V.S.</div>
+  <div class="ui bball-red vertical divider">V.S.</div>
   <div class="ui eight wide column ">
     {{outlet 'teamtwo'}}
   </div>
