playing with styles a little more

--- a/app/templates/teams/teamone.hbs
+++ b/app/templates/teams/teamone.hbs
@@ -17,7 +17,7 @@
 </div>
 
 {{#if teamOneShow}}
-  <div class="ui card light-fade center-el">
+  <div class="ui card center-el">
     <div class="content">
       <div class="header">
         <img class="ui avatar square medium"{{bind-attr src=teamOneShow.imgUrl}}/>
